--- a/.tekton/odh-base-image-cuda-py311-c9s-poc-push.yaml
+++ b/.tekton/odh-base-image-cuda-py311-c9s-poc-push.yaml
@@ -217,8 +217,7 @@ spec:
         - name: name
           value: buildah-oci-ta
         - name: bundle
-          value: quay.io/konflux-ci/tekton-catalog/task-buildah-oci-ta:0.4@sha256:c9ef8d723f5c3d65ec910d6fdb74607332620289ab083d6c97c602226fe7a8d2
-        - name: kind
+          value: quay.io/konflux-ci/tekton-catalog/task-buildah-oci-ta:0.4@sha256:db496b9f7072fb9d1c4b749db6bab8c19c0b647a8a4d2589833dcec979876657        - name: kind
           value: task
         resolver: bundles
       when:
