Add AI Pipelines exceptions to check-payload
These exceptions are required because AI Pipelines uses two different
binaries when in FIPS mode vs non-FIPS mode. The reason is that these
binaries are copied to the user's provided base image and in FIPS mode,
this means the OpenSSL version must match (e.g. UBI 9). In non-FIPS
mode, we leverage the builtin Go crypto so that the binaries are
portable.

Relates:
RHOAIENG-24702 and RHOAIENG-38121

Signed-off-by: mprahl <mprahl@users.noreply.github.com>

--- a/scripts/check-payload/config.toml
+++ b/scripts/check-payload/config.toml
@@ -170,6 +170,36 @@ dirs = ["/assets/downloads/cli"]
 error = "ErrGoMissingTag"
 dirs = ["/assets/downloads/cli"]
 
+# AI Pipelines override (RHOAIENG-24702 and RHOAIENG-38121)
+# When FIPS is enabled, /usr/bin/argoexec-fips is used. /usr/bin/argoexec is
+# only used for portability reasons in non-FIPS environments.
+[[payload.odh-data-science-pipelines-argo-argoexec-container.ignore]]
+error = "ErrGoNotCgoEnabled"
+files = ["/usr/bin/argoexec"]
+
+[[payload.odh-data-science-pipelines-argo-argoexec-container.ignore]]
+error = "ErrGoMissingSymbols"
+files = ["/usr/bin/argoexec"]
+
+[[payload.odh-data-science-pipelines-argo-argoexec-container.ignore]]
+error = "ErrNotDynLinked"
+files = ["/usr/bin/argoexec"]
+
+# AI Pipelines override (RHOAIENG-24702 and RHOAIENG-38121)
+# When FIPS is enabled, /usr/bin/launcher-v2-fips is used. /usr/bin/launcher-v2 is
+# only used for portability reasons in non-FIPS environments.
+[[payload.odh-ml-pipelines-launcher-container.ignore]]
+error = "ErrGoNotCgoEnabled"
+files = ["/usr/bin/launcher-v2"]
+
+[[payload.odh-ml-pipelines-launcher-container.ignore]]
+error = "ErrGoMissingSymbols"
+files = ["/usr/bin/launcher-v2"]
+
+[[payload.odh-ml-pipelines-launcher-container.ignore]]
+error = "ErrNotDynLinked"
+files = ["/usr/bin/launcher-v2"]
+
 # Temporary supprsssions for workbenches
 # https://github.com/openshift/check-payload/blob/main/internal/types/errors.go
 
