--- a/.tekton/odh-workbench-jupyter-minimal-cuda-py312-poc-push.yaml
+++ b/.tekton/odh-workbench-jupyter-minimal-cuda-py312-poc-push.yaml
@@ -29,7 +29,7 @@ spec:
   - name: path-context
     value: .
   - name: build-args-file
-    value: jupyter/minimal/ubi9-python-3.12/build-args/konflux.cuda.conf
+    value: jupyter/minimal/ubi9-python-3.12/build-args/cuda.conf
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
