--- a/.tekton/odh-pipeline-runtime-tensorflow-rocm-py312-poc-push.yaml
+++ b/.tekton/odh-pipeline-runtime-tensorflow-rocm-py312-poc-push.yaml
@@ -28,6 +28,8 @@ spec:
     value: codeserver/ubi9-python-3.12/Dockerfile.cpu
   - name: path-context
     value: .
+  - name: build-args-file
+    value: codeserver/ubi9-python-3.12/build-args/cpu.conf
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
