--- a/.tekton/odh-workbench-codeserver-datascience-cpu-py312-poc-push.yaml
+++ b/.tekton/odh-workbench-codeserver-datascience-cpu-py312-poc-push.yaml
@@ -28,6 +28,8 @@ spec:
     value: runtimes/rocm-tensorflow/ubi9-python-3.12/Dockerfile.rocm
   - name: path-context
     value: .
+  - name: build-args-file
+    value: runtimes/rocm-tensorflow/ubi9-python-3.12/build-args/rocm.conf
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
