--- a/.tekton/odh-pipeline-runtime-pytorch-llmcompressor-cuda-py312-poc-push.yaml
+++ b/.tekton/odh-pipeline-runtime-pytorch-llmcompressor-cuda-py312-poc-push.yaml
@@ -28,6 +28,8 @@ spec:
     value: runtimes/pytorch+llmcompressor/ubi9-python-3.12/Dockerfile.cuda
   - name: path-context
     value: .
+  - name: build-args-file
+    value: runtimes/pytorch+llmcompressor/ubi9-python-3.12/build-args/cuda.conf
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
