--- a/.tekton/odh-pipeline-runtime-datascience-cpu-py312-poc-push.yaml
+++ b/.tekton/odh-pipeline-runtime-datascience-cpu-py312-poc-push.yaml
@@ -23,7 +23,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/open-data-hub-tenant/odh-pipeline-runtime-datascience-cpu-py312-poc:{{revision}}
+    value: quay.io/opendatahub/odh-pipeline-runtime-datascience-cpu-py312-ubi9:odh-stable
   - name: dockerfile
     value: runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
   - name: path-context
