--- a/.tekton/odh-pipeline-runtime-tensorflow-rocm-py312-poc-push.yaml
+++ b/.tekton/odh-pipeline-runtime-tensorflow-rocm-py312-poc-push.yaml
@@ -18,7 +18,7 @@ metadata:
   namespace: open-data-hub-tenant
 spec:
   timeouts:
-      pipeline: "8h0m0s"
+    pipeline: "8h0m0s"
   params:
   - name: git-url
     value: '{{source_url}}'
@@ -193,6 +193,7 @@ spec:
       - name: netrc
         workspace: netrc
     - name: build-container
+      timeout: 8h
       params:
       - name: IMAGE
         value: $(params.output-image)
