--- a/.github/workflows/sec-scan.yml
+++ b/.github/workflows/sec-scan.yml
@@ -96,7 +96,7 @@ jobs:
       - name: setup python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'  # install the python version needed
+          python-version-file: '.python-version'
 
       - name: install python packages
         run: |
