--- a/.tekton/odh-base-image-cuda-12-8-py312-c9s-pull-request.yaml
+++ b/.tekton/odh-base-image-cuda-12-8-py312-c9s-pull-request.yaml
@@ -36,7 +36,7 @@ spec:
   - name: build-platforms
     value:
     - linux/x86_64
-    - linux/arm64
+    - linux-d160-m2xlarge/arm64
   - name: dockerfile
     value: base-images/cuda/12.8/c9s-python-3.12/Dockerfile.cuda
   - name: path-context
