--- a/.tekton/odh-workbench-jupyter-pytorch-rocm-py312-ubi9-pull-request.yaml
+++ b/.tekton/odh-workbench-jupyter-pytorch-rocm-py312-ubi9-pull-request.yaml
@@ -35,6 +35,7 @@ spec:
     value: 5d
   - name: build-platforms
     value:
+    # Increase build resources to use m2xlarge machines, avoid OOM
     - linux/x86_64
   - name: dockerfile
     value: jupyter/rocm/pytorch/ubi9-python-3.12/Dockerfile.rocm
