RHAIENG-2458: CVE-2025-66418 urllib3 decompression vulnerability
## CVE-2025-66418 Fix Implementation Summary

### Changes Made

**16 pylock.toml files updated** - all now use `urllib3==2.6.3` (patched version)

**Runtime pyproject.toml files (7 files):**
- Updated explicit dependency from `urllib3~=2.5.0` → `urllib3~=2.6.0`

**Jupyter workbench pyproject.toml files (8 files):**
- Added `override-dependencies = ["urllib3>=2.6.0"]` to override the `appengine-python-standard` constraint from `odh-elyra`

**Codeserver pyproject.toml (1 file):**
- Added `override-dependencies = ["urllib3>=2.6.0"]` to override the `kubernetes` constraint from `kubeflow-training`

### Verification

| Image Category | Count | urllib3 Version |
|----------------|-------|-----------------|
| Runtimes | 7 | ✅ 2.6.3 |
| Jupyter Workbenches | 8 | ✅ 2.6.3 |
| Codeserver | 1 | ✅ 2.6.3 |
| **Total** | **16** | **All patched** |

### Files Modified

- 16 `pyproject.toml` files (added override-dependencies or updated urllib3 pin)
- 16 `pylock.toml` files (regenerated with new urllib3 version)

The fix uses `override-dependencies` in uv to force the patched urllib3 version, bypassing the upstream constraints from:
- `appengine-python-standard` (via `odh-elyra`) - tracking: [elyra#3325](https://github.com/elyra-ai/elyra/issues/3325)
- `kubernetes` (via `kubeflow-training`) - tracking: [kubernetes-client/python#2458](https://github.com/kubernetes-client/python/issues/2458)

--- a/codeserver/ubi9-python-3.12/pyproject.toml
+++ b/codeserver/ubi9-python-3.12/pyproject.toml
@@ -34,3 +34,8 @@ dependencies = [
 environments = [
     "sys_platform == 'linux' and implementation_name == 'cpython'",
 ]
+override-dependencies = [
+    # RHAIENG-2458: CVE-2025-66418 urllib3 decompression vulnerability
+    # Upstream: https://github.com/kubernetes-client/python/issues/2458
+    "urllib3>=2.6.0",
+]
