--- a/jupyter/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/pytorch/ubi9-python-3.12/pyproject.toml
@@ -66,3 +66,8 @@ explicit = true
 environments = [
     "sys_platform == 'linux' and implementation_name == 'cpython'",
 ]
+override-dependencies = [
+    # RHAIENG-2458: CVE-2025-66418 urllib3 decompression vulnerability
+    # Upstream: https://github.com/elyra-ai/elyra/issues/3325
+    "urllib3>=2.6.0",
+]
