--- a/jupyter/rocm/tensorflow/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/rocm/tensorflow/ubi9-python-3.12/pyproject.toml
@@ -60,7 +60,10 @@ dependencies = [
 override-dependencies = [
     # tf2onnx has pinned protobuf version, that causes conflict with other packages
     "protobuf==6.31.1",
-    "keras~=3.12.0"
+    "keras~=3.12.0",
+    # RHAIENG-2458: CVE-2025-66418 urllib3 decompression vulnerability
+    # Upstream: https://github.com/elyra-ai/elyra/issues/3325
+    "urllib3>=2.6.0",
 ]
 
 constraint-dependencies = [
