fix(ci): disable Trivy OS package scanning for CentOS Stream (#2848)
CentOS Stream is not supported by Trivy for OS-level vulnerability
scanning. Trivy explicitly documents this limitation, as CentOS Stream
is upstream of RHEL and package versions don't match RHEL advisories.

This change:
- Adds `pkg-types` input to trivy-scan-action for controlling scan scope
- Skips OS package scanning (`pkg-types=library`) in opendatahub-io/notebooks
- Keeps full scanning (`pkg-types=os,library`) in red-hat-data-services/notebooks

Trivy will still scan language dependencies (Python, npm, etc.) which
are not affected by this limitation.

Closes: #2848

--- a/.github/actions/trivy-scan-action/action.yml
+++ b/.github/actions/trivy-scan-action/action.yml
@@ -55,6 +55,10 @@ inputs:
     description: 'Exit code when vulnerabilities are found'
     required: false
     default: '0'
+  pkg-types:
+    description: 'Comma-separated list of package types to scan: "os" (RPM, apt, etc.) and/or "library" (Python, npm, etc.). Use "library" only to skip OS package scanning for unsupported distros like CentOS Stream.'
+    required: false
+    default: 'os,library'
 
 outputs:
   report-file:
@@ -120,6 +124,7 @@ runs:
               "$SCAN_TYPE" \
               $SCAN_ARGS \
               --scanners "${{ inputs.scanners }}" \
+              --pkg-types "${{ inputs.pkg-types }}" \
               ${{ inputs.ignore-unfixed == 'true' && '--ignore-unfixed' || '' }} \
               --exit-code "${{ inputs.exit-code }}" \
               --timeout "${{ inputs.timeout }}" \
