fix(CVE): centralize CVE constraints in dependencies/cve-constraints.txt
RHAIENG-2458: CVE-2025-66418 urllib3 decompression vulnerability

- Create dependencies/cve-constraints.txt as single source of truth for
  CVE-induced minimum version constraints
- Update pylocks_generator.sh to use --constraints flag with CVE file
- Update comments on urllib3 overrides in jupyter images to explain that
  override is needed because odh-elyra's appengine-python-standard has
  an obnoxious urllib3<2 constraint
- Add docs/cves/python.md documenting the CVE resolution workflow

This approach:
- Centralizes CVE fixes in one file
- Applies constraints at resolution time via uv pip compile --constraints
- Uses override-dependencies only where needed (odh-elyra conflict)
- Prevents CVEs from returning through transitive dependencies

Thanks to Adriana Theodorakopoulou for contributing the CVE resolution
workflow documentation.

--- a/jupyter/datascience/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/datascience/ubi9-python-3.12/pyproject.toml
@@ -52,7 +52,7 @@ environments = [
     "sys_platform == 'linux' and implementation_name == 'cpython'",
 ]
 override-dependencies = [
-    # RHAIENG-2458: CVE-2025-66418 urllib3 decompression vulnerability
-    # Upstream: https://github.com/elyra-ai/elyra/issues/3325
+    # RHAIENG-2458: CVE-2025-66418 urllib3 - override needed because odh-elyra pulls in
+    # appengine-python-standard which has an obnoxious urllib3<2 constraint
     "urllib3>=2.6.0",
 ]
