--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -166,7 +166,7 @@ jobs:
         # NOTE: the arm64 GitHub hosted runner does not have the /mnt-mounted scratch disk
         if: "${{ contains(inputs.target, 'rocm') || contains(inputs.target, 'cuda') ||
          contains(inputs.target, 'pytorch') || contains(inputs.target, 'tensorflow') ||
-         inputs.platform == 'linux/arm64' }}"
+         contains(inputs.target, 'codeserver') || inputs.platform == 'linux/arm64' }}"
 
       - id: install-compsize
         run: sudo apt-get install -y btrfs-compsize
@@ -237,6 +237,25 @@ jobs:
              # In qemu-user, CACHELINE_SIZE probe is undefined
              # Compiling pyzmq through UV needs this in CFLAGS
              extra_podman_build_args += '--env=CFLAGS=-Dundefined=64 --env=CXXFLAGS=-Dundefined=64 --unsetenv=CFLAGS --unsetenv=CXXFLAGS'
+
+          if "codeserver" in "${{ inputs.target }}":
+             # Hermetic codeserver builds compile from source on every run — there
+             # is no effective layer cache to reuse.  --layers=false stops podman
+             # from persisting intermediate layers within each stage, cutting peak
+             # disk use roughly in half.
+             extra_podman_build_args += ' --layers=false'
+             # Cap V8 heap + parallelism to fit GHA runners (4 vCPUs, 16 GB RAM).
+             # These ARGs only take effect here; Konflux omits them so the
+             # Dockerfile defaults apply (no limits / 16384 for MAX_OLD_SPACE_SIZE).
+             # MAX_OLD_SPACE_SIZE caps the gulp VS Code build AND transpiler workers
+             # (build-vscode.sh hardcodes 16384 which OOMs on 16 GB runners).
+             # JOBS=1 limits transpiler workers to 1 thread — under QEMU arm64
+             # emulation, 2 workers at any budget exhaust the 16 GB runner.
+             # Budget: 4096 (main) + 1×4096 (worker) = ~8 GB V8 heap → ~8 GB for OS.
+             # Uses --build-arg so the ARG values are available in intermediate stages
+             # (--env only applies to the final stage in multi-stage builds).
+             # ARG values don't persist in the final image (unlike ENV).
+             extra_podman_build_args += ' --build-arg=NODE_OPTIONS=--max-old-space-size=1024 --build-arg=JOBS=1 --build-arg=MAX_OLD_SPACE_SIZE=4096'
 
           event_name: Literal['push', 'pull_request', 'pull_request_target', 'schedule', 'workflow_dispatch'] = "${{ fromJson(inputs.github).event_name }}"
           cache = "${{ env.CACHE }}"
